--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,5 @@ upload_speed = 921600
 monitor_filters = esp32_exception_decoder
 lib_deps =
   4-20ma/ModbusMaster @ ^2.0.1
-  plerup/EspSoftwareSerial @ ^7.0.0
+  ; plerup/EspSoftwareSerial @ ^7.0.0
+  bblanchon/ArduinoJson @ ^6.20.0
