--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 monitor_speed = 9600
 upload_speed = 921600
 monitor_filters = esp32_exception_decoder
+; build_flags = -DCORE_DEBUG_LEVEL=5
 lib_deps =
   4-20ma/ModbusMaster @ ^2.0.1
   ; plerup/EspSoftwareSerial @ ^7.0.0
