--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,37 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+
+; [env:esp32dev]
+; platform = espressif32
+; board = esp32dev
+; framework = arduino
+; monitor_speed = 115200
+; upload_speed = 921600
+; monitor_filters = esp32_exception_decoder
+; ; build_flags = -DCORE_DEBUG_LEVEL=5
+; board_build.filesystem = littlefs
+; lib_deps =
+;   4-20ma/ModbusMaster @ ^2.0.1
+;   ; plerup/EspSoftwareSerial @ ^7.0.0
+;   bblanchon/ArduinoJson @ ^6.20.0
+;   plerup/EspSoftwareSerial @ ^7.0.0
+
+[env:az-delivery-devkit-v4]
 platform = espressif32
-board = esp32dev
+board = az-delivery-devkit-v4
 framework = arduino
 monitor_speed = 9600
 upload_speed = 921600
 monitor_filters = esp32_exception_decoder
 ; build_flags = -DCORE_DEBUG_LEVEL=5
+; board_build.filesystem = littlefs
+build_flags = -DCORE_DEBUG_LEVEL=5
 lib_deps =
   4-20ma/ModbusMaster @ ^2.0.1
   ; plerup/EspSoftwareSerial @ ^7.0.0
   bblanchon/ArduinoJson @ ^6.20.0
+  plerup/EspSoftwareSerial @ ^7.0.0
+ force_verbose = yes
+
+  
