gereksiz yorum satirlari silindi

--- a/platformio.ini
+++ b/platformio.ini
@@ -33,11 +33,11 @@ upload_speed = 921600
 monitor_filters = esp32_exception_decoder
 ; board_build.filesystem = littlefs
 build_flags = -DCORE_DEBUG_LEVEL=5
+force_verbose = yes
 lib_deps =
   4-20ma/ModbusMaster @ ^2.0.1
   ; plerup/EspSoftwareSerial @ ^7.0.0
   bblanchon/ArduinoJson @ ^6.20.0
-  plerup/EspSoftwareSerial @ ^7.0.0
- force_verbose = yes
+  ; plerup/EspSoftwareSerial @ ^7.0.0
 
   
