sicaklik okuma eklendi

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,22 +8,6 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-
-; [env:esp32dev]
-; platform = espressif32
-; board = esp32dev
-; framework = arduino
-; monitor_speed = 115200
-; upload_speed = 921600
-; monitor_filters = esp32_exception_decoder
-; ; build_flags = -DCORE_DEBUG_LEVEL=5
-; board_build.filesystem = littlefs
-; lib_deps =
-;   4-20ma/ModbusMaster @ ^2.0.1
-;   ; plerup/EspSoftwareSerial @ ^7.0.0
-;   bblanchon/ArduinoJson @ ^6.20.0
-;   plerup/EspSoftwareSerial @ ^7.0.0
-
 [env:az-delivery-devkit-v4]
 platform = espressif32
 board = az-delivery-devkit-v4
@@ -31,13 +15,8 @@ framework = arduino
 monitor_speed = 9600
 upload_speed = 921600
 monitor_filters = esp32_exception_decoder
-; board_build.filesystem = littlefs
 build_flags = -DCORE_DEBUG_LEVEL=5
-force_verbose = yes
-lib_deps =
-  4-20ma/ModbusMaster @ ^2.0.1
-  ; plerup/EspSoftwareSerial @ ^7.0.0
-  bblanchon/ArduinoJson @ ^6.20.0
-  ; plerup/EspSoftwareSerial @ ^7.0.0
-
-  
+lib_deps = 
+	4-20ma/ModbusMaster @ ^2.0.1
+	bblanchon/ArduinoJson @ ^6.20.0
+	adafruit/MAX6675 library@^1.1.0
