--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ framework = arduino
 monitor_speed = 9600
 upload_speed = 921600
 monitor_filters = esp32_exception_decoder
-build_flags = -DCORE_DEBUG_LEVEL=5
+; build_flags = -DCORE_DEBUG_LEVEL=5
 lib_deps = 
 	4-20ma/ModbusMaster @ ^2.0.1
 	bblanchon/ArduinoJson @ ^6.20.0
