--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif32
 board = az-delivery-devkit-v4
 framework = arduino
-monitor_speed = 9600
+monitor_speed = 115200
 upload_speed = 921600
 monitor_filters = esp32_exception_decoder
 ; build_flags = -DCORE_DEBUG_LEVEL=5
@@ -20,4 +20,6 @@ lib_deps =
 	4-20ma/ModbusMaster @ ^2.0.1
 	bblanchon/ArduinoJson @ ^6.20.0
 	adafruit/MAX6675 library@^1.1.0
-	
+	https://github.com/Links2004/arduinoWebSockets@^2.4.0
+  ; https://github.com/tzapu/WiFiManager/
+  ESP WebServer
